# rinha-de-backend-2024-q1-python

./: Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  env.sample  pyproject.toml
rinha_2024_q1/: config.py  database.py  exceptions.py  handler.py  main.py  model.py
